--- a/src/i18n/de/project-settings.json
+++ b/src/i18n/de/project-settings.json
@@ -1,16 +1,19 @@
 {
   "Project Settings": "Projekteinstellungen",
   "Tagging Vocabulary": "Tag-Vokabular",
-  "You can pre-define a tagging vocabulary": "Begriffe aus dem Tag-Vokabular werden Benutzern automatisch als Vorschläge angezeigt, wenn sie neue Tags anlegen. Es können aber nach wie vor auch eigene Tags verwendet werden.",
+  "Tag": "Tag",
+  "Color": "Farbe",
+  "You can pre-define a tagging vocabulary": "Begriffe aus dem Tag-Vokabular werden Benutzern automatisch als Vorschläge angezeigt, wenn sie neue Tags erstellen. Benutzer können aber weiterhin auch eigene Tags verwenden. Optional lassen sich den Vokabular-Tags vordefinierte Farben zuordnen.",
   "No tagging vocabulary": "Kein Tag-Vokabular festgelegt",
-  "Add vocabulary terms below": "Add terms to the vocabulary by pasting into the text field (one term per line).",
-  "Clear": "Löschen",
+  "Add vocabulary terms below": "Füge Begriffe zum Vokabular hinzu, indem du sie in das Textfeld einfügst (ein Begriff pro Zeile).",
+  "Clear All": "Alle Löschen",
   "Save": "Speichern",
-  "Add to Vocabulary": "Add to Vocabulary",
+  "Add to Vocabulary": "Zum Vokabular Hinzufügen",
   "Error loading tag vocabulary.": "Fehler beim Laden des Tag-Vokabulars.",
   "Error saving tag vocabulary.": "Fehler beim Speichern des Tag-Vokabulars.",
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Name and Access Settings": "Name und Zugriffseinstellungen",
+  "Plugins": "Plugins",
   "Tagging": "Tagging",
   "Project Status": "Projektstatus",
   "status_message": "Projekte können aktiv oder gesperrt sein. Gesperrte Projekte sind schreibgeschützt. Projektmitglieder können sie aber immer noch öffnen. Es können keine neuen Mitglieder mehr eingeladen werden. Gesperrten öffentlichen Projekten können keine neuen Mitglieder mehr beitreten. Nur Dein Organisations-Administrator kann ein gesperrtes Projekt wieder entsperren.",
