--- a/src/i18n/en/project-settings.json
+++ b/src/i18n/en/project-settings.json
@@ -1,10 +1,12 @@
 {
   "Project Settings": "Project Settings",
   "Tagging Vocabulary": "Tagging Vocabulary",
-  "You can pre-define a tagging vocabulary": "Begriffe aus dem Tag-Vokabular werden Benutzern automatisch als Vorschläge angezeigt, wenn sie neue Tags anlegen. Es können aber nach wie vor auch eigene Tags verwendet werden.",
+  "Tag": "Tag",
+  "Color": "Color",
+  "You can pre-define a tagging vocabulary": "Terms from the tagging vocabulary are automatically suggested to users when they create new tags. However, users can still create their own custom tags. Optionally, fixed colors can be assigned to the vocabulary tags.",
   "No tagging vocabulary": "No tagging vocabulary defined",  
   "Add vocabulary terms below": "Add terms to the vocabulary by pasting into the text field (one term per line).",
-  "Clear": "Clear",
+  "Clear All": "Clear All",
   "Save": "Save",
   "Add to Vocabulary": "Add to Vocabulary",
   "Error loading tag vocabulary.": "Error loading tag vocabulary.",
