--- a/src/i18n/de/auth-reset-password.json
+++ b/src/i18n/de/auth-reset-password.json
@@ -8,5 +8,8 @@
   "Could not reset password": "Passwort konnte nicht zurückgesetzt werden",
   "Password reset.": "Passwort erfolgreich zurückgesetzt.",
   "Go to dashboard.": "Zum Dashboard.",
-  "Your email address": "Email Adresse"
+  "Your email address": "Email Adresse",
+  "Credentials Updated": "Credentials Updated",
+  "Set Password": "Set Password",
+  "Login": "Login"
 }
