--- a/src/i18n/en/auth-reset-password.json
+++ b/src/i18n/en/auth-reset-password.json
@@ -8,5 +8,8 @@
   "New password should be different from the old password.": "New password should be different from the old password.",
   "Could not reset password": "Could not reset password",
   "Password reset.": "Password successfully reset.",
-  "Go to dashboard.": "Go to dashboard."
+  "Go to dashboard.": "Go to dashboard.",
+  "Credentials Updated": "Credentials Updated",
+  "Set Password": "Set Password",
+  "Login": "Login"
 }
