--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -47,6 +47,9 @@
   "Edit assignment": "Arbeitsauftrag ändern",
   "Delete assignment": "Arbeitsauftrag löschen",
   "Deleted": "Gelöscht",
+  "Delete": "Löschen",
+  "Are you sure you want to delete this assignment?": "Arbeitsauftrag Löschen",
+  "Deleting this assignment will remove it from all users and will no longer be visible here.": "Der Arbeitsauftrag wird für alle Team-Mitglieder gelöscht.",
   "Assignment deleted successfully.": "Der Arbeitsauftrag wurde gelöscht.",
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Could not delete the assignment.": "Der Arbeitsauftrag konnte nicht gelöscht werden.",
