Added DE labels

--- a/src/i18n/de/auth-reset-password.json
+++ b/src/i18n/de/auth-reset-password.json
@@ -9,7 +9,7 @@
   "Password reset.": "Passwort erfolgreich zurückgesetzt.",
   "Go to dashboard.": "Zum Dashboard.",
   "Your email address": "Email Adresse",
-  "Credentials Updated": "Credentials Updated",
-  "Set Password": "Set Password",
+  "Credentials Updated": "Anmeldedaten aktualisiert",
+  "Set Password": "Password Setzen",
   "Login": "Login"
 }
