--- a/src/i18n/de/email.json
+++ b/src/i18n/de/email.json
@@ -2,7 +2,7 @@
   "Hello Recogito Studio User": "Hallo Recogito Studio Benutzer",
   "_welcome_message_": "${sender} hat Dich in das Projekt ${project_name} auf ${host} eingeladen. Du kannst diese Einladung mit Klick auf den Button akzeptieren, oder über das Menü \"Benachrichtigungen\" in deinem Recogito Dashboard.",
   "_you_have_been_invited_": "Du wurdest in ein Projekt eingeladen",
-  "_join_recogito_message_": "You have been invited to join other users on ${instance_name}. Use the button below to accept the invitation and set your credentials.  We look forward to seeing your there!",
+  "_join_recogito_message_": "Du wurdest eingeladen, ${instance_name} beizutreten. Klicke auf den Button, um die Einladung anzunehmen und Deine Zugangsdaten festzulegen. Wir freuen uns schon darauf, Dich auf ${instance_name} zu begrüßen!",
   "Accept Invite": "Accept Invite",
   "Join Recogito": "Join Recogito"
 }
