#84 - Refactoring "dashboard-projects" layout

--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -83,5 +83,6 @@
   "active": "Active",
   "locked": "Locked",
   "View": "View",
-  "Unlock Project": "Unlock Project"
+  "Unlock Project": "Unlock Project",
+  "Groups": "Groups"
 }
