#84 - Adding "no matching records" message to SelectTagDefinitionsDialog

--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -95,5 +95,6 @@
   "Number of Projects": "Number of Projects",
   "Success": "Success",
   "Project group successfully added": "${name} successfully added",
-  "Successfully updated groups for project": "Successfully updated groups for ${name}"
+  "Successfully updated groups for project": "Successfully updated groups for ${name}",
+  "No matching records": "No matching records"
 }
