--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -96,5 +96,11 @@
   "Success": "Success",
   "Project group successfully added": "${name} successfully added",
   "Successfully updated groups for project": "Successfully updated groups for ${name}",
-  "No matching records": "No matching records"
+  "No matching records": "No matching records",
+  "Rename group": "Rename group",
+  "Delete group": "Delete group",
+  "Successfully deleted group": "Successfully deleted ${name}",
+  "Are you sure you want to delete this group?": "Are you sure you want to delete this group?",
+  "Rename Project Group": "Rename Project Group",
+  "Successfully renamed group": "Successfully renamed group"
 }
