#84 - Adding empty project group filter message

--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -102,5 +102,6 @@
   "Successfully deleted group": "Successfully deleted ${name}",
   "Are you sure you want to delete this group?": "Are you sure you want to delete this group?",
   "Rename Project Group": "Rename Project Group",
-  "Successfully renamed group": "Successfully renamed group"
+  "Successfully renamed group": "Successfully renamed group",
+  "This group doesn't have any project files.": "This group doesn't have any project files."
 }
