--- a/src/i18n/en/project-assignment-details.json
+++ b/src/i18n/en/project-assignment-details.json
@@ -3,7 +3,7 @@
   "Open document": "Open document",
   "Open document in new tab": "Open document in new tab",
   "Export TEI file": "Export TEI file",
-  "Export annotations as CSV": "Export annotations as CSV",
+  "Export Annotations": "Export Annotations",
   "Public annotations only": "Export public annotations only",
   "Include my private annotations": "Include my private annotations"
 }
