--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -62,5 +62,5 @@
   "Select All": "Alles auswählen",
   "Base Assignment": "Basis-Arbeitsauftrag",
   "You have not added any team members.": "Keine Teammitglieder ausgewählt. Aktuell haben nur Projektadministratoren Zugriff. Du kannst den Arbeitsauftrag später jederzeit ändern.",
-  "Assignments Wizard": "Assignments Wizard"
+  "Assignments Wizard": "Arbeitsauftrag Erstellen"
 }
