--- a/src/i18n/de/project-assignment-details.json
+++ b/src/i18n/de/project-assignment-details.json
@@ -3,7 +3,7 @@
   "Open document": "Dokument öffnen",
   "Open document in new tab": "In neuem Tab öffnen",
   "Export TEI file": "TEI/XML exportieren",
-  "Export Annotations": "Export Annotations",
+  "Export Annotations": "Annotationen exportieren",
   "Public annotations only": "Nur öffentliche Annotationen",
   "Include my private annotations": "Inkl. meiner privaten Annotationen"
 }
