--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -1,5 +1,5 @@
 {
-  "Add Assignment": "Add Assignment",
+  "Add Assignment": "Neuer Arbeitsauftrag",
   "Unnamed Assignment": "Unbenannter Arbeitsauftrag",
   "Create a new Assignment": "Neuen Arbeitsauftrag erstellen",
   "1. General": "1. Allgemein",
@@ -62,5 +62,5 @@
   "Select All": "Alles auswählen",
   "Base Assignment": "Basis-Arbeitsauftrag",
   "You have not added any team members.": "Keine Teammitglieder ausgewählt. Aktuell haben nur Projektadministratoren Zugriff. Du kannst den Arbeitsauftrag später jederzeit ändern.",
-  "Export annotations as CSV": "Export annotations as CSV"
+  "Export annotations as CSV": "Annotationen als CSV exportieren"
 }
