--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -75,5 +75,31 @@
   "active": "Aktiv",
   "locked": "Gesperrt",
   "View": "Status",
-  "Unlock Project": "Projekt entsperren"
+  "Unlock Project": "Projekt entsperren",
+  "Groups": "Gruppen",
+  "Create Project Group": "Projektgruppe Erstellen",
+  "Group name...": "Gruppenname...",
+  "Add to group": "Zur Gruppe hinzufügen",
+  "Add to Selected": "Zur Auswahl Hinzufügen",
+  "Add project to group": "\"${name}\" zu Gruppe Hinzufügen",
+  "Select group(s) to add project to": "Gruppe(n) auswählen",
+  "All Groups": "Alle Gruppen",
+  "Number of Projects": "Anzahl Projekte",
+  "Success": "Erfolgreich",
+  "Project group successfully added": "${name} wurde hinzugefügt",
+  "Successfully updated groups for project": "Gruppen für ${name} wurden aktualisiert",
+  "No matching records": "Keine Einträge gefunden",
+  "Rename group": "Gruppe umbenennen",
+  "Delete group": "Gruppe löschen",
+  "Successfully deleted group": "Gruppe ${name} gelöscht",
+  "Are you sure you want to delete this group?": "Bist Du sicher, dass Du diese Gruppe löschen willst?",
+  "Rename Project Group": "Gruppe umbenennen",
+  "Successfully renamed group": "Gruppe erfolgreich umbenannt",
+  "This group doesn't have any project files.": "Diese Gruppe enthält keine Projekte.",
+  "Add Project": "Projekt hinzufügen",
+  "Existing Project": "Bestehendes Projekt",
+  "All Projects": "Alle Projekte",
+  "Select project(s) to add to group": "Projekt(e) auswählen",
+  "Add projects to group": "Projekt zu ${name} hinzufügen",
+  "Successfully updated projects in group": "Projekte in ${name} wurden aktualisiert"
 }
