--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -109,5 +109,7 @@
   "All Projects": "All Projects",
   "Select project(s) to add to group": "Select project(s) to add to group",
   "Add projects to group": "Add projects to ${name}",
-  "Successfully updated projects in group": "Successfully updated projects in ${name}"
+  "Successfully updated projects in group": "Successfully updated projects in ${name}",
+  "Select Groups": "Select Groups",
+  "Select Projects": "Select Projects"
 }
