--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -62,6 +62,6 @@
   "Select All": "Alles auswählen",
   "Base Assignment": "Basis-Arbeitsauftrag",
   "You have not added any team members.": "Keine Teammitglieder ausgewählt. Aktuell haben nur Projektadministratoren Zugriff. Du kannst den Arbeitsauftrag später jederzeit ändern.",
-  "Export annotations as CSV": "Annotationen als CSV exportieren"
+  "Export annotations as CSV": "Annotationen als CSV exportieren",
   "Assignments Wizard": "Arbeitsauftrag Erstellen"
 }
