--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -7,7 +7,7 @@
   "Clear": "Clear",
   "Add a project description": "Add a project description",
   "Add a project description...": "Add a project description...",
-  "Import Document": "Import Document",
+  "Import": "Import",
   "Menu actions for document:": "Menu actions for document:",
   "Open document": "Open document",
   "Open document in new tab": "Open document in new tab",
@@ -57,7 +57,7 @@
   "All Documents": "All Documents",
   "Document Type": "Document Type",
   "URL": "URL",
-  "Add Selected Documents": "Add Selected Documents",
+  "Add Selected": "Add Selected",
   "Search": "Search",
   "View Document Metadata": "View Document Metadata",
   "Private": "Private",
@@ -73,5 +73,6 @@
   "Show More": "Show More",
   "Show Less": "Show Less",
   "Are you sure you want to remove the document from the document library? Only documents that are not used by active projects can be removed.": "Are you sure you want to remove the document from the document library? Only documents that are not used by active projects can be removed.",
-  "Locked": "Locked"
+  "Locked": "Locked",
+  "Collections": "Collections"
 }
