--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -61,5 +61,5 @@
   "Send Invitations": "Einladungen Senden",
   "Invitations Sent": "Einladungen Gesendet",
   "Invitations were sent to your list of users.": "Die Einladungen wurden an die Benutzer versandt.",
-  "Add single user": "Add single user"
+  "Add single user": "Einzelnen Benutzer hinzufügen"
 }
