--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -66,5 +66,6 @@
   "Assignments Wizard": "Arbeitsauftrag Erstellen",
   "All team members": "All team members",
   "Select team members": "Select team members",
-  "Who has access to this assignment?": "Who has access to this assignment?"
+  "Who has access to this assignment?": "Who has access to this assignment?",
+  "All current and future team members will be added to the assignment.": "All current and future team members will be added to the assignment."
 }
