--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -60,6 +60,7 @@
   "Add Selected": "Add Selected",
   "Search": "Search",
   "View Document Metadata": "View Document Metadata",
+  "View document metadata": "View document metadata",
   "Private": "Private",
   "Make Private": "Make Private",
   "Make Public": "Make Public",
@@ -74,5 +75,21 @@
   "Show Less": "Show Less",
   "Are you sure you want to remove the document from the document library? Only documents that are not used by active projects can be removed.": "Are you sure you want to remove the document from the document library? Only documents that are not used by active projects can be removed.",
   "Locked": "Locked",
-  "Collections": "Collections"
+  "Collections": "Collections",
+  "date": "Date",
+  "artist": "Artist",
+  "medium": "Medium",
+  "copyright": "Copyright",
+  "dimensions": "Dimensions",
+  "credit_line": "Credit Line",
+  "institution": "Institution",
+  "accession_number": "Accession Number",
+  "notes":  "Notes",
+  "author": "Author",
+  "source": "Source",
+  "license": "License",
+  "version": "Version",
+  "language": "Language",
+  "publication_date": "Publication Date",
+  "No document metadata available.": "No document metadata available."
 }
