--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -7,7 +7,7 @@
   "Clear": "Löschen",
   "Add a project description": "Projektbeschreibung hinzufügen",
   "Add a project description...": "Projektbeschreibung hinzufügen...",
-  "Import Document": "Dokument Importieren",
+  "Import": "Importieren",
   "Menu actions for document:": "Menüoptionen für Dokument:",
   "Open document": "Dokument öffnen",
   "Open document in new tab": "In neuem Tab öffnen",
@@ -57,10 +57,11 @@
   "All Documents": "Alle Dokumente",
   "Document Type": "Format",
   "URL": "URL",
-  "Add Selected Documents": "Ausgewählte Dokumente importieren",
+  "Add Selected": "Auswahl hinzufügen",
   "No Documents": "Keine Dokumente",
   "Search": "Suche",
   "View Document Metadata": "Metadaten anzeigen",
+  "View document metadata": "Metadaten anzeigen",
   "Private": "Privat",
   "Make Private": "Dokument privat machen",
   "Make Public": "Dokument öffentlich machen",
@@ -74,5 +75,22 @@
   "Show More": "Mehr...",
   "Show Less": "Weniger...",
   "Are you sure you want to remove the document from the document library? Only documents that are not used by active projects can be removed.": "Bist Du sicher dass Du dieses Dokument entfernen möchtest? Dokumente können nur entfernt werden, wenn sie in in keinem aktiven Projekt verwendet werden.",
-  "Locked": "Gesperrt"
+  "Locked": "Gesperrt",
+  "Collections": "Sammlungen",
+  "date": "Datum",
+  "artist": "Künstler",
+  "medium": "Medium",
+  "copyright": "Copyright",
+  "dimensions": "Dimensionen",
+  "credit_line": "Bildnachweis",
+  "institution": "Institution",
+  "accession_number": "Zugangsnummer",
+  "notes":  "Notizen",
+  "author": "Autor",
+  "source": "Quelle",
+  "license": "Lizenz",
+  "version": "Version",
+  "language": "Sprache",
+  "publication_date": "Publikationsdatum",
+  "No document metadata available.": "Keine Metadaten vorhanden."
 }
