--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -7,7 +7,7 @@
   "Clear": "Clear",
   "Add a project description": "Add a project description",
   "Add a project description...": "Add a project description...",
-  "Import Document": "Import Document",
+  "Import": "Import",
   "Menu actions for document:": "Menu actions for document:",
   "Open document": "Open document",
   "Open document in new tab": "Open document in new tab",
@@ -57,9 +57,10 @@
   "All Documents": "All Documents",
   "Document Type": "Document Type",
   "URL": "URL",
-  "Add Selected Documents": "Add Selected Documents",
+  "Add Selected": "Add Selected",
   "Search": "Search",
   "View Document Metadata": "View Document Metadata",
+  "View document metadata": "View document metadata",
   "Private": "Private",
   "Make Private": "Make Private",
   "Make Public": "Make Public",
@@ -73,5 +74,22 @@
   "Show More": "Show More",
   "Show Less": "Show Less",
   "Are you sure you want to remove the document from the document library? Only documents that are not used by active projects can be removed.": "Are you sure you want to remove the document from the document library? Only documents that are not used by active projects can be removed.",
-  "Locked": "Locked"
+  "Locked": "Locked",
+  "Collections": "Collections",
+  "date": "Date",
+  "artist": "Artist",
+  "medium": "Medium",
+  "copyright": "Copyright",
+  "dimensions": "Dimensions",
+  "credit_line": "Credit Line",
+  "institution": "Institution",
+  "accession_number": "Accession Number",
+  "notes":  "Notes",
+  "author": "Author",
+  "source": "Source",
+  "license": "License",
+  "version": "Version",
+  "language": "Language",
+  "publication_date": "Publication Date",
+  "No document metadata available.": "No document metadata available."
 }
