--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -79,9 +79,37 @@
   "Accept invitation to": "Accept invitation to",
   "You have been invited to this project by": "You have been invited to this project by",
   "Locked": "Locked",
-  "all": "All",
-  "active": "Active",
-  "locked": "Locked",
+  "all": "All Projects",
+  "active": "Active Projects",
+  "locked": "Locked Projects",
   "View": "View",
-  "Unlock Project": "Unlock Project"
+  "Unlock Project": "Unlock Project",
+  "Groups": "Groups",
+  "Create Project Group": "Create Project Group",
+  "Group name...": "Group name...",
+  "Add to group": "Add to group",
+  "Add to Selected": "Add to Selected",
+  "Add project to group": "Add \"${name}\" to group",
+  "Select group(s) to add project to": "Select group(s) to add project to",
+  "All Groups": "All Groups",
+  "Number of Projects": "Number of Projects",
+  "Success": "Success",
+  "Project group successfully added": "${name} successfully added",
+  "Successfully updated groups for project": "Successfully updated groups for ${name}",
+  "No matching records": "No matching records",
+  "Rename group": "Rename group",
+  "Delete group": "Delete group",
+  "Successfully deleted group": "Successfully deleted ${name}",
+  "Are you sure you want to delete this group?": "Are you sure you want to delete this group?",
+  "Rename Project Group": "Rename Project Group",
+  "Successfully renamed group": "Successfully renamed group",
+  "This group doesn't have any project files.": "This group doesn't have any project files.",
+  "Add Project": "Add Project",
+  "Existing Project": "Existing Project",
+  "All Projects": "All Projects",
+  "Select project(s) to add to group": "Select project(s) to add to group",
+  "Add projects to group": "Add projects to ${name}",
+  "Successfully updated projects in group": "Successfully updated projects in ${name}",
+  "Select Groups": "Select Groups",
+  "Select Projects": "Select Projects"
 }
