--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -76,20 +76,6 @@
   "Are you sure you want to remove the document from the document library? Only documents that are not used by active projects can be removed.": "Are you sure you want to remove the document from the document library? Only documents that are not used by active projects can be removed.",
   "Locked": "Locked",
   "Collections": "Collections",
-  "date": "Date",
-  "artist": "Artist",
-  "medium": "Medium",
-  "copyright": "Copyright",
-  "dimensions": "Dimensions",
-  "credit_line": "Credit Line",
-  "institution": "Institution",
-  "accession_number": "Accession Number",
-  "notes":  "Notes",
-  "author": "Author",
-  "source": "Source",
-  "license": "License",
-  "version": "Version",
-  "language": "Language",
-  "publication_date": "Publication Date",
-  "No document metadata available.": "No document metadata available."
+  "No document metadata available.": "No document metadata available.",
+  "Add Metadata": "Add Metadata"
 }
