--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -64,8 +64,8 @@
   "You have not added any team members.": "Keine Teammitglieder ausgewählt. Aktuell haben nur Projektadministratoren Zugriff. Du kannst den Arbeitsauftrag später jederzeit ändern.",
   "Export annotations as CSV": "Annotationen als CSV exportieren",
   "Assignments Wizard": "Arbeitsauftrag Erstellen",
-  "All team members": "All team members",
-  "Select team members": "Select team members",
-  "Who has access to this assignment?": "Who has access to this assignment?",
-  "All current and future team members will be added to the assignment.": "All current and future team members will be added to the assignment."
+  "All team members": "Alle Teammitglieder",
+  "Select team members": "Mitglieder auswählen",
+  "Who has access to this assignment?": "Wer hat Zugriff auf diesen Arbeitsauftrag?",
+  "All current and future team members will be added to the assignment.": "Alle aktuellen und zukünftigen Teammitglieder werden dem Arbeitsauftrag zugewiesen."
 }
