#139 - Adding ability to view/edit document metadata from annotations view

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -77,5 +77,10 @@
   "YouTube URL": "YouTube URL",
   "YouTube Video": "YouTube Video",
   "Zoom in": "Zoom +",
-  "Zoom out": "Zoom -"
+  "Zoom out": "Zoom -",
+  "Metadata": "Metadata",
+  "No document metadata available.": "No document metadata available.",
+  "Internal": "Internal",
+  "External": "External",
+  "Add Metadata": "Add Metadata"
 }
