--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -95,5 +95,10 @@
   "Add an annotation...": "Add an annotation...",
   "Connection Lost.": "Connection Lost.",
   "Try refreshing the page.": "Try refreshing the page.",
-  "Copy link to annotation": "Copy link to annotation"
+  "Copy link to annotation": "Copy link to annotation",
+  "Metadata": "Metadata",
+  "No document metadata available.": "No document metadata available.",
+  "Internal": "Internal",
+  "External": "External",
+  "Add Metadata": "Add Metadata"
 }
