--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -78,5 +78,5 @@
   "Locked": "Gesperrt",
   "Collections": "Sammlungen",
   "No document metadata available.": "Keine Metadaten vorhanden.",
-  "Add Metadata": "Add Metadata"
+  "Add Metadata": "Neues Metadatenfeld"
 }
