--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -77,5 +77,10 @@
   "YouTube URL": "YouTube URL",
   "YouTube Video": "YouTube Video",
   "Zoom in": "Zoom +",
-  "Zoom out": "Zoom -"
+  "Zoom out": "Zoom -",
+  "Metadata": "Metadaten",
+  "No document metadata available.": "Keine Metadata vorhanden.",
+  "Internal": "Intern",
+  "External": "Extern",
+  "Add Metadata": "Neues Metadatenfeld"
 }
