Add artist to collection search

--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -25,6 +25,7 @@
   "Edit Document Metadata": "Edit Document Metadata",
   "Title": "Title",
   "Author": "Author",
+  "Author/Artist": "Author/Artist",
   "Publication date": "Publication date",
   "License": "License",
   "Version": "Version",
