--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -25,6 +25,7 @@
   "Edit Document Metadata": "Dokumentmetadaten",
   "Title": "Titel",
   "Author": "Autor",
+  "Author/Artist": "Author/Artist",
   "Publication date": "Publikationsdatum",
   "License": "Lizenz",
   "Version": "Version",
