--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -79,5 +79,9 @@
   "Locked": "Gesperrt",
   "Collections": "Sammlungen",
   "No document metadata available.": "Keine Metadaten vorhanden.",
-  "Add Metadata": "Neues Metadatenfeld"
+  "Add Metadata": "Neues Metadatenfeld",
+  "Accept End User License Agreement": "Accept End User License Agreement",
+  "I have read and accept EULA": "I have read and accept EULA",
+  "Read EULA": "Read EULA",
+  "uploaded_content_warning": "Uploaded documents and images should comply with all applicable copyright rules and regulations. Please review and accept the linked End User License Agreement (EULA) before uploading any content."
 }
