--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -78,5 +78,9 @@
   "Locked": "Locked",
   "Collections": "Collections",
   "No document metadata available.": "No document metadata available.",
-  "Add Metadata": "Add Metadata"
+  "Add Metadata": "Add Metadata",
+  "Accept End User License Agreement": "Accept End User License Agreement",
+  "I have read and accept EULA": "I have read and accept EULA",
+  "Read EULA": "Read EULA",
+  "uploaded_content_warning": "Uploaded documents and images should comply with all applicable copyright rules and regulations. Please review and accept the linked End User License Agreement (EULA) before uploading any content."
 }
