Added DE labels

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -80,8 +80,8 @@
   "Collections": "Sammlungen",
   "No document metadata available.": "Keine Metadaten vorhanden.",
   "Add Metadata": "Neues Metadatenfeld",
-  "Accept End User License Agreement": "Accept End User License Agreement",
-  "I have read and accept EULA": "I have read and accept EULA",
-  "Read EULA": "Read EULA",
-  "uploaded_content_warning": "Uploaded documents and images should comply with all applicable copyright rules and regulations. Please review and accept the linked End User License Agreement (EULA) before uploading any content."
+  "Accept End User License Agreement": "Endbenutzer-Lizenzvereinbarung akzeptieren",
+  "I have read and accept EULA": "Ich habe die EULA gelesen und akzeptiere sie",
+  "Read EULA": "EULA lesen",
+  "uploaded_content_warning": "Hochgeladene Dokumente und Bilder müssen allen geltenden Urheberrechtsregeln und -vorschriften entsprechen. Bitte lesen und akzeptieren Sie die verlinkte Endbenutzer-Lizenzvereinbarung (EULA) bevor Sie Inhalte hochladen."
 }
