Added missing localization

--- a/src/i18n/en/a11y.json
+++ b/src/i18n/en/a11y.json
@@ -18,6 +18,7 @@
   "delete this unaccepted invitation": "delete this unaccepted invitation",
   "remove this user from the project": "remove this user from the project",
   "select this user for an action": "select this user for an action",
+  "select all users for this action": "select all users for this action",
   "rearrange this assignment by dragging": "rearrange this assignment by dragging",
   "select all documents in project": "select all documents in project",
   "add document": "add document",
