Added DE labels

--- a/src/i18n/de/a11y.json
+++ b/src/i18n/de/a11y.json
@@ -1,67 +1,67 @@
 {
-  "open or close the filters tab": "open or close the filters tab",
-  "open or close the pages tab": "open or close the pages tab",
-  "open or close the metadata tab": "open or close the metadata tab",
-  "zoom in": "zoom in",
-  "zoom out": "zoom out",
-  "cancel editing": "cancel editing",
-  "save annotation": "save annotation",
-  "annotation action menu": "annotation action menu",
-  "save reply": "save reply",
-  "cancel adding tag": "cancel adding tag",
-  "save tag": "save tag",
-  "open sidebar navigation": "open sidebar navigation",
-  "close sidebar": "close sidebar",
-  "add project group": "add project group",
-  "a link that can be sent to users you wish to invite to the project": "a link that can be sent to users you wish to invite to the project",
-  "copy join link": "copy join link",
-  "delete this unaccepted invitation": "delete this unaccepted invitation",
-  "remove this user from the project": "remove this user from the project",
-  "select this user for an action": "select this user for an action",
-  "rearrange this assignment by dragging": "rearrange this assignment by dragging",
-  "select all documents in project": "select all documents in project",
-  "add document": "add document",
-  "to this assignment": "to this assignment",
-  "drag and drop target for documents": "drag and drop target for documents",
-  "documents view": "documents view",
-  "assignments view": "assignments view",
-  "set project visibility": "set project visibility",
-  "set project type": "set project type",
-  "document view right": "document view right",
-  "choose a different color for this tag": "choose a different color for this tag",
-  "hexadecimal value for this color": "hexadecimal value for this color",
-  "close": "close",
-  "profile": "profile",
-  "help": "help",
-  "sign out": "sign out",
-  "user management": "user management",
-  "color legend": "color legend",
-  "rearrange this document by dragging": "rearrange this document by dragging",
-  "open this document in current window": "open this document in current window",
-  "open this document in a new window": "open this document in a new window",
-  "view this documents metadata": "view this documents metadata",
-  "export this document`s public annotations as a t e i file": "export this document`s public annotations as a t e i file",
-  "download this document`s public and your privates annotations as a t e i file": "download this document`s public and your privates annotations as a t e i file",
-  "export this document`s public annotations as a p d f file": "export this document`s public annotations as a p d f file",
-  "download this document`s public and your privates annotations as a p d f file": "download this document`s public and your privates annotations as a p d f file",
-  "export this document`s public annotations as a c s v file": "export this document`s public annotations as a c s v file",
-  "download this document`s public and your privates annotations as a c s v file": "download this document`s public and your privates annotations as a c s v file",
-  "remove this document from the project": "remove this document from the project",
-  "undo last action": "undo last action",
-  "redo last action": "redo last action",
-  "insert an image": "insert an image",
-  "insert an html link": "insert an html link",
-  "insert a video": "insert a video",
+  "open or close the filters tab": "Tab 'Filter' öffnen oder schliessen",
+  "open or close the pages tab": "Tab 'Thumbnails' öffnen oder schliessen",
+  "open or close the metadata tab": "Tab 'Metadaten' öffnen oder schliessen",
+  "zoom in": "Zoom vergößern",
+  "zoom out": "zoom verkleinern",
+  "cancel editing": "Änderungen verwerfen",
+  "save annotation": "Annotation speichern",
+  "annotation action menu": "Annotations-Optionen",
+  "save reply": "Antwort speichern",
+  "cancel adding tag": "Tag verwerfen",
+  "save tag": "Tag speichern",
+  "open sidebar navigation": "Seitenleiste öffnen",
+  "close sidebar": "Seitenleiste schliessen",
+  "add project group": "Projektgruppe hinzufügen",
+  "a link that can be sent to users you wish to invite to the project": "Ein Link den Du an Benutzer senden kannst um sie ins Projekt einzuladen",
+  "copy join link": "Teilnahme-Link kopieren",
+  "delete this unaccepted invitation": "Diese nicht angenommene Einladung löschen",
+  "remove this user from the project": "Benutzer aus dem Projekt entfernen",
+  "select this user for an action": "Diesen Benutzer auswählen",
+  "rearrange this assignment by dragging": "Diesen Arbeitsauftrag per drag-and-drop verschieben",
+  "select all documents in project": "Alle Dokumente im Projekt auswählen",
+  "add document": "Dokument",
+  "to this assignment": "dem Arbeitsauftrag hinzufügen",
+  "drag and drop target for documents": "Zielbereich für Dokumente per drag-and-drop",
+  "documents view": "Dokumenten-Ansicht",
+  "assignments view": "Arbeitsauftrags-Ansicht",
+  "set project visibility": "Projekt-Sichtbarkeit festlegen",
+  "set project type": "Projekttyp festlegen",
+  "document view right": "Dokumentenansicht: rechte Seitenleiste",
+  "choose a different color for this tag": "Farbe für dieses Tag ändern",
+  "hexadecimal value for this color": "Hex-Wert für diese Farbe",
+  "close": "Schliessen",
+  "profile": "Profil",
+  "help": "Hilfe",
+  "sign out": "Ausloggen",
+  "user management": "Benutzerverwaltung",
+  "color legend": "Farblegende",
+  "rearrange this document by dragging": "Dieses Dokument per drag-and-drop verschieben",
+  "open this document in current window": "Dokument in diesem Browsertab öffnen",
+  "open this document in a new window": "Dokument in neuem Browsertab öffnen",
+  "view this documents metadata": "Dokument-Metadaten anzeigen",
+  "export this document`s public annotations as a t e i file": "Öffentliche Annotationen in diesem Dokument als T E I Datei exportieren",
+  "download this document`s public and your private annotations as a t e i file": "Öffentliche und eigene private Annotationen in diesem Dokument als T E I Datei exportieren",
+  "export this document`s public annotations as a p d f file": "Öffentliche Annotationen in diesem Dokument als P D F Datei exportieren",
+  "download this document`s public and your private annotations as a p d f file": "Öffentliche und eigene private Annotationen in diesem Dokument als P D F Datei exportieren",
+  "export this document`s public annotations as a c s v file": "Öffentliche Annotationen in diesem Dokument als C S V Datei exportieren",
+  "download this document`s public and your private annotations as a c s v file": "Öffentliche und eigene private Annotationen in diesem Dokument als C S V Datei exportieren",
+  "remove this document from the project": "Dieses Dokument aus dem Projekt entfernen",
+  "undo last action": "Letzte Aktion rückgängig machen",
+  "redo last action": "Letzte Aktion wiederherstellen",
+  "insert an image": "Bild einfügen",
+  "insert an html link": "HTML Link einfügen",
+  "insert a video": "Video einbetten",
   "Recogito Studio Logo": "Recogito Studio Logo",
-  "Text alignment": "Text alignment",
-  "arrange projects as cards": "arrange projects as cards",
-  "arrange-projects as list": "arrange-projects as list",
-  "name your assignment": "name your assignment",
-  "enter instructions for this assignment": "enter instructions for this assignment",
-  "remove document": "remove document",
-  "from this assignment": "from this assignment",
-  "enter user email address": "enter user email address",
-  "select users access level": "select users access level",
-  "example of invite users spreadsheet": "example of invite users spreadsheet",
-  "edit document metadata": "edit document metadata"
+  "Text alignment": "Text Ausrichtung",
+  "arrange projects as cards": "Projekte als Karten anzeigen",
+  "arrange-projects as list": "Projekte als Liste anzeigen",
+  "name your assignment": "Arbeitsauftrag benennen",
+  "enter instructions for this assignment": "Ergänzende Informationen für diesen Arbeitsauftrag eingeben",
+  "remove document": "Dokument",
+  "from this assignment": "aus diesem Arbeitsauftrag entfernen",
+  "enter user email address": "Benutzer-E-Mail-Adresse eingeben",
+  "select users access level": "Berechtigungsstufe auswählen",
+  "example of invite users spreadsheet": "Beispiel für eine Einladungs-Tabelle",
+  "edit document metadata": "Dokument-Metadaten bearbeiten"
 }
