--- a/src/i18n/en/a11y.json
+++ b/src/i18n/en/a11y.json
@@ -42,11 +42,11 @@
   "open this document in a new window": "open this document in a new window",
   "view this documents metadata": "view this documents metadata",
   "export this document`s public annotations as a t e i file": "export this document`s public annotations as a t e i file",
-  "download this document`s public and your privates annotations as a t e i file": "download this document`s public and your privates annotations as a t e i file",
+  "download this document`s public and your private annotations as a t e i file": "download this document`s public and your private annotations as a t e i file",
   "export this document`s public annotations as a p d f file": "export this document`s public annotations as a p d f file",
-  "download this document`s public and your privates annotations as a p d f file": "download this document`s public and your privates annotations as a p d f file",
+  "download this document`s public and your private annotations as a p d f file": "download this document`s public and your private annotations as a p d f file",
   "export this document`s public annotations as a c s v file": "export this document`s public annotations as a c s v file",
-  "download this document`s public and your privates annotations as a c s v file": "download this document`s public and your privates annotations as a c s v file",
+  "download this document`s public and your private annotations as a c s v file": "download this document`s public and your private annotations as a c s v file",
   "remove this document from the project": "remove this document from the project",
   "undo last action": "undo last action",
   "redo last action": "redo last action",
